css header and footer

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,13 @@
-<p>Header</p>
+<div class="container-fluid top-bar card">
+  <div class="row">
+    <div class="col-md-4 center">
+      <img mat-card-image src="../../../assets/logo.png" alt="" height="70" width="auto">
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <h1 class="center">Aplicação Teste para estudo</h1>
+    </div>
+    <div class="col-md-4 col-xs-12">
+    </div>
+
+  </div>
+</div>
