--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,5 +1,22 @@
 
 <header-component></header-component>
-login-page
 
-<footer-component></footer-component>
+<div class="container center login">
+    <mat-card class="card-login">
+        <div class="row center">
+            <mat-form-field>
+              <input matInput placeholder="Login">
+            </mat-form-field>
+          </div>
+          <div class="row center">
+            <mat-form-field>
+              <input matInput placeholder="Senha" type="password">
+            </mat-form-field>
+          </div>
+          <div class="row center">
+            <button mat-flat-button color="primary">Acessar</button>
+          </div>
+      </mat-card>
+</div>
+
+<footer-component class="footer"></footer-component>
