--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="footer-component">
+          <p class="center">Guilherme Cardoso - 2019</p>
+        </div>
+    </div>
+  </div>
