table for list users

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,13 @@
 <div class="container-fluid top-bar card">
   <div class="row">
-    <div class="col-md-4 center">
+    <div class="col-md-4 col-xs-12 hidden-xs">
+      <img mat-card-image src="../../../assets/logo.png" alt="" height="70" width="auto">
+    </div>
+    <div class="col-md-4 col-xs-12 text-center visible-xs">
       <img mat-card-image src="../../../assets/logo.png" alt="" height="70" width="auto">
     </div>
     <div class="col-md-4 col-xs-12">
-      <h1 class="center">Aplicação Teste para estudo</h1>
+      <h1 class="text-center">Aplicação Teste para estudo</h1>
     </div>
     <div class="col-md-4 col-xs-12">
     </div>
